# linear-regression-notes

./: .gitignore  global-templates  linear-regression.typ  main.typ  utils.typ
.github/workflows/: compile.yml
broken-assumptions/: multicollinearity.typ  weak-exogeneity.typ
scripts/: run_figures.py  update_environment.py
scripts/case_studies/ols_violations/: environment.yml  pyproject.toml
scripts/case_studies/ols_violations/notebooks/: 0.01-rmh-homoscedasticity.ipynb  0.02-rmh-t-test.ipynb  0.03-rmh-dickey-fuller.ipynb  0.04-rmh-autocorrelation.ipynb
scripts/case_studies/ols_violations/ols_violations/scripts/: run_homoscedasticity.py
scripts/case_studies/ols_violations/ols_violations/utils/: plotting.py
scripts/case_studies/ols_violations/ols_violations/violations/: __init__.py  autocorrelation.py  base_violation.py  homoscedasticity.py
scripts/case_studies/ols_violations/src/ols_violations/: __init__.py
scripts/case_studies/ols_violations/src/ols_violations/utils/: __init__.py  utils.py
scripts/case_studies/ols_violations/src/ols_violations/violations/: autocorrelation.py  homoscedasticity.py
scripts/figures/: generate-regression-plots.py
src/: linear-regression.typ  main.typ  ref.bib
src/broken-assumptions/: autocorrelation.typ  homoscedasticity.typ  multicollinearity.typ  weak-exogeneity.typ
src/time-series-analysis/: time-series.typ
time-series-analysis/: time-series.typ
