[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ols_violations"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "statsmodels",
    "tqdm",
]

[tool.setuptools]
packages = ["ols_violations"]
package-dir = {"" = "src"}